Fixed 2nd and 3rd to last grid row. Spacing was incorrect. Also Adjusted styles.scss import order.

--- a/css/styles.css
+++ b/css/styles.css
@@ -906,6 +906,10 @@ table {
       text-align: center; } }
 
 @media (min-width: 768px) {
+  .theme__colors.grid__col--7, .theme__colors.grid__col--8 {
+    flex: 2; } }
+
+@media (min-width: 768px) {
   .grid__col--12 {
     display: flex;
     flex-direction: row;
